# pydsdl

./: .coveralls.yml  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AGENTS.md  CONTRIBUTING.rst  LICENSE  README.md  SERDES_IMPLEMENTATION_PLAN.md  appveyor.yml  conftest.py  demo.py  noxfile.py  pyproject.toml  release.sh  release_on_pypi.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.sh  test_namespace.py  update_subtree_parsimonious.sh  update_third_party_subtrees.sh
.devcontainer/: devcontainer.json
.github/workflows/: make-release.yml  pullrequest.yml  test-and-release.yml
demo/: DemoMessage.1.0.dsdl  demo_serdes.py
docs/: build.sh  conf.py  descendant_autodoc.py  descendant_diagram.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/pages/: demo.rst  installation.rst  pydsdl.rst  usage.rst
pydsdl/: __init__.py  _bit_length_set.py  _data_schema_builder.py  _data_type_builder.py  _dsdl.py  _dsdl_definition.py  _error.py  _expression.py  _namespace.py  _namespace_reader.py  _non_intrusive_test.py  _parser.py  _parser_test.py  _port_id_ranges.py  _serdes.py  _serializable.py  _test.py  _test_serdes.py  aggregate_builder.py  communication_primitive.py  data_schema_builder.py  data_structure_builder.py  data_type.py  data_type_builder.py  data_type_categories.py  data_type_id_ranges.py  dsdl_definition.py  dsdl_definition_parser.py  dsdl_parser.py  error.py  exception.py  expression.py  frontend_error.py  grammar.parsimonious  namespace.py  namespace_crawler.py  namespace_parser.py  parse_error.py  parse_tree_processor.py  parse_tree_transformer.py  (+8 more)
pydsdl/_bit_length_set/: __init__.py  _bit_length_set.py  _symbolic.py  _symbolic_test.py
pydsdl/_expression/: __init__.py  _any.py  _container.py  _operator.py  _primitive.py  _test.py
pydsdl/_serializable/: __init__.py  _array.py  _attribute.py  _composite.py  _name.py  _primitive.py  _root.py  _serializable.py  _void.py
pydsdl/dsdl_parser/: __init__.py  ast_transformer.py  exceptions.py  expression.py  expression_types.py  grammar.parsimonious  options.py  parse_tree_transformer.py  parser.py
test/: test_public_types.py
